feat!: Added v3.3.0 from PhantomBot
* 🔄 v3.3.0 Upload

* 🇩🇪 v3.3.0 German translation

* Fixes found errors.

* Fixes

* File rename

* Added translation